commit controllers Mines and Storages

--- a/AspNetGame/AspNetGame.csproj
+++ b/AspNetGame/AspNetGame.csproj
@@ -331,6 +331,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Controllers\Game\Mines\" />
+    <Folder Include="Controllers\Game\Stores\" />
     <Folder Include="Models\Game\Ships\" />
   </ItemGroup>
   <ItemGroup>
