--- a/AspNetGame/AspNetGame.csproj
+++ b/AspNetGame/AspNetGame.csproj
@@ -245,7 +245,13 @@
     <Compile Include="Controllers\Game\Ships\CruisersController.cs" />
     <Compile Include="Controllers\Game\Ships\DestroyersController.cs" />
     <Compile Include="Controllers\Game\Ships\StrikersController.cs" />
+    <Compile Include="Controllers\Game\Mines\GoldMinesController.cs" />
+    <Compile Include="Controllers\Game\Mines\IronMinesController.cs" />
+    <Compile Include="Controllers\Game\Mines\PlutoniumMinesController.cs" />
     <Compile Include="Controllers\Game\Ships\ScoutsController.cs" />
+    <Compile Include="Controllers\Game\Stores\GoldWarehousesController.cs" />
+    <Compile Include="Controllers\Game\Stores\IronWarehousesController.cs" />
+    <Compile Include="Controllers\Game\Stores\PlutoniumWarehousesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\RoleController.cs" />
@@ -443,6 +449,39 @@
     <Folder Include="App_Data\" />
     <Folder Include="Controllers\Game\Mines\" />
     <Folder Include="Views\Base\" />
+    <Content Include="Views\GoldMines\Create.cshtml" />
+    <Content Include="Views\GoldMines\Delete.cshtml" />
+    <Content Include="Views\GoldMines\Details.cshtml" />
+    <Content Include="Views\GoldMines\Edit.cshtml" />
+    <Content Include="Views\GoldMines\Index.cshtml" />
+    <Content Include="Views\PlutoniumMines\Create.cshtml" />
+    <Content Include="Views\PlutoniumMines\Delete.cshtml" />
+    <Content Include="Views\PlutoniumMines\Details.cshtml" />
+    <Content Include="Views\PlutoniumMines\Edit.cshtml" />
+    <Content Include="Views\PlutoniumMines\Index.cshtml" />
+    <Content Include="Views\IronMines\Create.cshtml" />
+    <Content Include="Views\IronMines\Delete.cshtml" />
+    <Content Include="Views\IronMines\Details.cshtml" />
+    <Content Include="Views\IronMines\Edit.cshtml" />
+    <Content Include="Views\IronMines\Index.cshtml" />
+    <Content Include="Views\PlutoniumWarehouses\Create.cshtml" />
+    <Content Include="Views\PlutoniumWarehouses\Delete.cshtml" />
+    <Content Include="Views\PlutoniumWarehouses\Details.cshtml" />
+    <Content Include="Views\PlutoniumWarehouses\Edit.cshtml" />
+    <Content Include="Views\PlutoniumWarehouses\Index.cshtml" />
+    <Content Include="Views\GoldWarehouses\Create.cshtml" />
+    <Content Include="Views\GoldWarehouses\Delete.cshtml" />
+    <Content Include="Views\GoldWarehouses\Details.cshtml" />
+    <Content Include="Views\GoldWarehouses\Edit.cshtml" />
+    <Content Include="Views\GoldWarehouses\Index.cshtml" />
+    <Content Include="Views\IronWarehouses\Create.cshtml" />
+    <Content Include="Views\IronWarehouses\Delete.cshtml" />
+    <Content Include="Views\IronWarehouses\Details.cshtml" />
+    <Content Include="Views\IronWarehouses\Edit.cshtml" />
+    <Content Include="Views\IronWarehouses\Index.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup />
