commit controllers Mine and Storage

--- a/AspNetGame/AspNetGame.csproj
+++ b/AspNetGame/AspNetGame.csproj
@@ -233,7 +233,13 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\Game\Mines\GoldMinesController.cs" />
+    <Compile Include="Controllers\Game\Mines\IronMinesController.cs" />
+    <Compile Include="Controllers\Game\Mines\PlutoniumMinesController.cs" />
     <Compile Include="Controllers\Game\Ships\ScoutsController.cs" />
+    <Compile Include="Controllers\Game\Stores\GoldWarehousesController.cs" />
+    <Compile Include="Controllers\Game\Stores\IronWarehousesController.cs" />
+    <Compile Include="Controllers\Game\Stores\PlutoniumWarehousesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
@@ -344,12 +350,39 @@
     <Content Include="Views\Scouts\Details.cshtml" />
     <Content Include="Views\Scouts\Edit.cshtml" />
     <Content Include="Views\Scouts\Index.cshtml" />
+    <Content Include="Views\GoldMines\Create.cshtml" />
+    <Content Include="Views\GoldMines\Delete.cshtml" />
+    <Content Include="Views\GoldMines\Details.cshtml" />
+    <Content Include="Views\GoldMines\Edit.cshtml" />
+    <Content Include="Views\GoldMines\Index.cshtml" />
+    <Content Include="Views\PlutoniumMines\Create.cshtml" />
+    <Content Include="Views\PlutoniumMines\Delete.cshtml" />
+    <Content Include="Views\PlutoniumMines\Details.cshtml" />
+    <Content Include="Views\PlutoniumMines\Edit.cshtml" />
+    <Content Include="Views\PlutoniumMines\Index.cshtml" />
+    <Content Include="Views\IronMines\Create.cshtml" />
+    <Content Include="Views\IronMines\Delete.cshtml" />
+    <Content Include="Views\IronMines\Details.cshtml" />
+    <Content Include="Views\IronMines\Edit.cshtml" />
+    <Content Include="Views\IronMines\Index.cshtml" />
+    <Content Include="Views\PlutoniumWarehouses\Create.cshtml" />
+    <Content Include="Views\PlutoniumWarehouses\Delete.cshtml" />
+    <Content Include="Views\PlutoniumWarehouses\Details.cshtml" />
+    <Content Include="Views\PlutoniumWarehouses\Edit.cshtml" />
+    <Content Include="Views\PlutoniumWarehouses\Index.cshtml" />
+    <Content Include="Views\GoldWarehouses\Create.cshtml" />
+    <Content Include="Views\GoldWarehouses\Delete.cshtml" />
+    <Content Include="Views\GoldWarehouses\Details.cshtml" />
+    <Content Include="Views\GoldWarehouses\Edit.cshtml" />
+    <Content Include="Views\GoldWarehouses\Index.cshtml" />
+    <Content Include="Views\IronWarehouses\Create.cshtml" />
+    <Content Include="Views\IronWarehouses\Delete.cshtml" />
+    <Content Include="Views\IronWarehouses\Details.cshtml" />
+    <Content Include="Views\IronWarehouses\Edit.cshtml" />
+    <Content Include="Views\IronWarehouses\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Controllers\Game\Mines\" />
-    <Folder Include="Controllers\Game\Stores\" />
-    <Folder Include="Models\Game\Ships\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
