Concrete model classes for Defence, Ships and factories

--- a/AspNetGame/AspNetGame.csproj
+++ b/AspNetGame/AspNetGame.csproj
@@ -236,6 +236,16 @@
     <Compile Include="Controllers\Core\BaseControllers.cs" />
     <Compile Include="Controllers\Game\PlanetsController.cs" />
     <Compile Include="Controllers\Game\PlayersController.cs" />
+    <Compile Include="Controllers\Game\Defence\LaserTowersController.cs" />
+    <Compile Include="Controllers\Game\Defence\MissileLaunchersController.cs" />
+    <Compile Include="Controllers\Game\Defence\PowerShieldsController.cs" />
+    <Compile Include="Controllers\Game\Factories\ResearchCentersController.cs" />
+    <Compile Include="Controllers\Game\Factories\SpaceShipyardsController.cs" />
+    <Compile Include="Controllers\Game\Factories\WeaponFactoriesController.cs" />
+    <Compile Include="Controllers\Game\Ships\CruisersController.cs" />
+    <Compile Include="Controllers\Game\Ships\DestroyersController.cs" />
+    <Compile Include="Controllers\Game\Ships\ScoutsController.cs" />
+    <Compile Include="Controllers\Game\Ships\StrikersController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\RoleController.cs" />
@@ -378,6 +388,56 @@
     <Content Include="Views\Planets\Index.cshtml" />
     <Content Include="Views\Players\Index.cshtml" />
     <Content Include="Views\Planets\Details.cshtml" />
+    <Content Include="Views\Scouts\Create.cshtml" />
+    <Content Include="Views\Scouts\Delete.cshtml" />
+    <Content Include="Views\Scouts\Details.cshtml" />
+    <Content Include="Views\Scouts\Edit.cshtml" />
+    <Content Include="Views\Scouts\Index.cshtml" />
+    <Content Include="Views\Cruisers\Create.cshtml" />
+    <Content Include="Views\Cruisers\Delete.cshtml" />
+    <Content Include="Views\Cruisers\Details.cshtml" />
+    <Content Include="Views\Cruisers\Edit.cshtml" />
+    <Content Include="Views\Cruisers\Index.cshtml" />
+    <Content Include="Views\Strikers\Create.cshtml" />
+    <Content Include="Views\Strikers\Delete.cshtml" />
+    <Content Include="Views\Strikers\Details.cshtml" />
+    <Content Include="Views\Strikers\Edit.cshtml" />
+    <Content Include="Views\Strikers\Index.cshtml" />
+    <Content Include="Views\Destroyers\Create.cshtml" />
+    <Content Include="Views\Destroyers\Delete.cshtml" />
+    <Content Include="Views\Destroyers\Details.cshtml" />
+    <Content Include="Views\Destroyers\Edit.cshtml" />
+    <Content Include="Views\Destroyers\Index.cshtml" />
+    <Content Include="Views\PowerShields\Create.cshtml" />
+    <Content Include="Views\PowerShields\Delete.cshtml" />
+    <Content Include="Views\PowerShields\Details.cshtml" />
+    <Content Include="Views\PowerShields\Edit.cshtml" />
+    <Content Include="Views\PowerShields\Index.cshtml" />
+    <Content Include="Views\LaserTowers\Create.cshtml" />
+    <Content Include="Views\LaserTowers\Delete.cshtml" />
+    <Content Include="Views\LaserTowers\Details.cshtml" />
+    <Content Include="Views\LaserTowers\Edit.cshtml" />
+    <Content Include="Views\LaserTowers\Index.cshtml" />
+    <Content Include="Views\MissileLaunchers\Create.cshtml" />
+    <Content Include="Views\MissileLaunchers\Delete.cshtml" />
+    <Content Include="Views\MissileLaunchers\Details.cshtml" />
+    <Content Include="Views\MissileLaunchers\Edit.cshtml" />
+    <Content Include="Views\MissileLaunchers\Index.cshtml" />
+    <Content Include="Views\SpaceShipyards\Create.cshtml" />
+    <Content Include="Views\SpaceShipyards\Delete.cshtml" />
+    <Content Include="Views\SpaceShipyards\Details.cshtml" />
+    <Content Include="Views\SpaceShipyards\Edit.cshtml" />
+    <Content Include="Views\SpaceShipyards\Index.cshtml" />
+    <Content Include="Views\ResearchCenters\Create.cshtml" />
+    <Content Include="Views\ResearchCenters\Delete.cshtml" />
+    <Content Include="Views\ResearchCenters\Details.cshtml" />
+    <Content Include="Views\ResearchCenters\Edit.cshtml" />
+    <Content Include="Views\ResearchCenters\Index.cshtml" />
+    <Content Include="Views\WeaponFactories\Create.cshtml" />
+    <Content Include="Views\WeaponFactories\Delete.cshtml" />
+    <Content Include="Views\WeaponFactories\Details.cshtml" />
+    <Content Include="Views\WeaponFactories\Edit.cshtml" />
+    <Content Include="Views\WeaponFactories\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
