Implemented authentication/registration from shanu MS examples

--- a/AspNetGame/Web.config
+++ b/AspNetGame/Web.config
@@ -11,7 +11,9 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-AspNetGame-20180720052512.mdf;Initial Catalog=aspnet-AspNetGame-20180720052512;Integrated Security=True"
+    <add name="AuthenticationConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-AspNetGame-Authentification.mdf;Initial Catalog=aspnet-AspNetGame-Authentification;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+    <add name="GameConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-AspNetGame-Game.mdf;Initial Catalog=aspnet-AspNetGame-Game;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
