--- a/AspNetGame/AspNetGame.csproj
+++ b/AspNetGame/AspNetGame.csproj
@@ -268,6 +268,7 @@
     <Compile Include="Models\Game\Factories\ResearchCenter.cs" />
     <Compile Include="Models\Game\Factories\SpaceShipyard.cs" />
     <Compile Include="Models\Game\Factories\WeaponFactory.cs" />
+    <Compile Include="Models\Game\GameDbContext.cs" />
     <Compile Include="Models\Game\Planet.cs" />
     <Compile Include="Models\Game\Player.cs" />
     <Compile Include="Models\Game\BaseUnits\SpaceShip.cs" />
@@ -291,6 +292,7 @@
     <Compile Include="Models\Game\Stores\PlutoniumWarehouse.cs" />
     <Compile Include="Models\Game\Stores\IStore.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
@@ -434,6 +436,20 @@
     <Content Include="Views\WeaponFactories\Details.cshtml" />
     <Content Include="Views\WeaponFactories\Edit.cshtml" />
     <Content Include="Views\WeaponFactories\Index.cshtml" />
+    <Content Include="Views\Account\ConfirmEmail.cshtml" />
+    <Content Include="Views\Account\ExternalLoginConfirmation.cshtml" />
+    <Content Include="Views\Account\ExternalLoginFailure.cshtml" />
+    <Content Include="Views\Account\ForgotPassword.cshtml" />
+    <Content Include="Views\Account\ForgotPasswordConfirmation.cshtml" />
+    <Content Include="Views\Account\Login.cshtml" />
+    <Content Include="Views\Account\Register.cshtml" />
+    <Content Include="Views\Account\ResetPassword.cshtml" />
+    <Content Include="Views\Account\ResetPasswordConfirmation.cshtml" />
+    <Content Include="Views\Account\SendCode.cshtml" />
+    <Content Include="Views\Account\VerifyCode.cshtml" />
+    <Content Include="Views\Account\_ExternalLoginsListPartial.cshtml" />
+    <Content Include="Views\Users\Index.cshtml" />
+    <Content Include="Views\Shared\_LoginPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
