--- a/AspNetGame/AspNetGame.csproj
+++ b/AspNetGame/AspNetGame.csproj
@@ -242,6 +242,7 @@
     <Compile Include="Controllers\Game\Factories\ResearchCentersController.cs" />
     <Compile Include="Controllers\Game\Factories\SpaceShipyardsController.cs" />
     <Compile Include="Controllers\Game\Factories\WeaponFactoriesController.cs" />
+    <Compile Include="Controllers\Game\PlayersController.cs" />
     <Compile Include="Controllers\Game\Ships\CruisersController.cs" />
     <Compile Include="Controllers\Game\Ships\DestroyersController.cs" />
     <Compile Include="Controllers\Game\Ships\ScoutsController.cs" />
@@ -461,6 +462,7 @@
     <Content Include="Views\Manage\ManageLogins.cshtml" />
     <Content Include="Views\Manage\SetPassword.cshtml" />
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
+    <Content Include="Views\Players\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
