--- a/AspNetGame/AspNetGame.csproj
+++ b/AspNetGame/AspNetGame.csproj
@@ -233,6 +233,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\Core\BaseControllers.cs" />
     <Compile Include="Controllers\Game\Mines\GoldMinesController.cs" />
     <Compile Include="Controllers\Game\Mines\IronMinesController.cs" />
     <Compile Include="Controllers\Game\Mines\PlutoniumMinesController.cs" />
@@ -242,6 +243,7 @@
     <Compile Include="Controllers\Game\Factories\ResearchCentersController.cs" />
     <Compile Include="Controllers\Game\Factories\SpaceShipyardsController.cs" />
     <Compile Include="Controllers\Game\Factories\WeaponFactoriesController.cs" />
+    <Compile Include="Controllers\Game\PlanetsController.cs" />
     <Compile Include="Controllers\Game\Ships\CruisersController.cs" />
     <Compile Include="Controllers\Game\Ships\DestroyersController.cs" />
     <Compile Include="Controllers\Game\Ships\ScoutsController.cs" />
@@ -461,9 +463,11 @@
     <Content Include="Views\Manage\ManageLogins.cshtml" />
     <Content Include="Views\Manage\SetPassword.cshtml" />
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
+    <Content Include="Views\Planets\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Base\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
