commit BuildingController beginning

--- a/AspNetGame/AspNetGame.csproj
+++ b/AspNetGame/AspNetGame.csproj
@@ -233,6 +233,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\Game\BuildingController.cs" />
     <Compile Include="Controllers\Game\Core\BaseController.cs" />
     <Compile Include="Controllers\Game\Core\GameController.cs" />
     <Compile Include="Controllers\Game\Admin\ResourceController.cs" />
@@ -338,11 +339,51 @@
     </Content>
     <Content Include="Areas\HelpPage\Views\_ViewStart.cshtml" />
     <Content Include="Content\Site.css" />
-    <Content Include="Views\Web.config" />
-    <Content Include="Views\_ViewStart.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Shared\Error.cshtml" />
-    <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Services\Views\Web.config" />
+    <Content Include="Services\Views\_ViewStart.cshtml" />
+    <Content Include="Services\Views\Home\Index.cshtml" />
+    <Content Include="Services\Views\Shared\Error.cshtml" />
+    <Content Include="Services\Views\Shared\_Layout.cshtml" />
+    <Content Include="Services\Views\Account\ConfirmEmail.cshtml" />
+    <Content Include="Services\Views\Account\ExternalLoginConfirmation.cshtml" />
+    <Content Include="Services\Views\Account\ExternalLoginFailure.cshtml" />
+    <Content Include="Services\Views\Account\ForgotPassword.cshtml" />
+    <Content Include="Services\Views\Account\ForgotPasswordConfirmation.cshtml" />
+    <Content Include="Services\Views\Account\Login.cshtml" />
+    <Content Include="Services\Views\Account\Register.cshtml" />
+    <Content Include="Services\Views\Account\ResetPassword.cshtml" />
+    <Content Include="Services\Views\Account\ResetPasswordConfirmation.cshtml" />
+    <Content Include="Services\Views\Account\SendCode.cshtml" />
+    <Content Include="Services\Views\Account\VerifyCode.cshtml" />
+    <Content Include="Services\Views\Account\_ExternalLoginsListPartial.cshtml" />
+    <Content Include="Services\Views\Users\Index.cshtml" />
+    <Content Include="Services\Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Services\Views\Role\Create.cshtml" />
+    <Content Include="Services\Views\Role\Index.cshtml" />
+    <Content Include="Services\Views\Manage\AddPhoneNumber.cshtml" />
+    <Content Include="Services\Views\Manage\ChangePassword.cshtml" />
+    <Content Include="Services\Views\Manage\Index.cshtml" />
+    <Content Include="Services\Views\Manage\ManageLogins.cshtml" />
+    <Content Include="Services\Views\Manage\SetPassword.cshtml" />
+    <Content Include="Services\Views\Manage\VerifyPhoneNumber.cshtml" />
+    <Content Include="Services\Views\Resource\Details.cshtml" />
+    <Content Include="Services\Views\Resource\Index.cshtml" />
+    <Content Include="Services\Views\Shared\ResourcesCost.cshtml" />
+    <Content Include="Services\Views\UnitTemplate\Create.cshtml" />
+    <Content Include="Services\Views\UnitTemplate\Details.cshtml" />
+    <Content Include="Services\Views\UnitTemplate\Fragments\Attacker.cshtml" />
+    <Content Include="Services\Views\UnitTemplate\Fragments\Builder.cshtml" />
+    <Content Include="Services\Views\UnitTemplate\Fragments\Extractor.cshtml" />
+    <Content Include="Services\Views\UnitTemplate\Fragments\Mobile.cshtml" />
+    <Content Include="Services\Views\UnitTemplate\Fragments\Researcher.cshtml" />
+    <Content Include="Services\Views\UnitTemplate\Fragments\Storage.cshtml" />
+    <Content Include="Services\Views\UnitTemplate\Index.cshtml" />
+    <Content Include="Services\Views\Planet\Create.cshtml" />
+    <Content Include="Services\Views\Planet\Index.cshtml" />
+    <Content Include="Services\Views\Shared\PlanetCard.cshtml" />
+    <Content Include="Services\Views\Building\Create.cshtml" />
+    <Content Include="Services\Views\Building\Index.cshtml" />
+    <Content Include="Services\Views\Shared\BuildingTypeCard.cshtml" />
     <Content Include="Views\Account\ConfirmEmail.cshtml" />
     <Content Include="Views\Account\ExternalLoginConfirmation.cshtml" />
     <Content Include="Views\Account\ExternalLoginFailure.cshtml" />
@@ -355,19 +396,27 @@
     <Content Include="Views\Account\SendCode.cshtml" />
     <Content Include="Views\Account\VerifyCode.cshtml" />
     <Content Include="Views\Account\_ExternalLoginsListPartial.cshtml" />
-    <Content Include="Views\Users\Index.cshtml" />
-    <Content Include="Views\Shared\_LoginPartial.cshtml" />
-    <Content Include="Views\Role\Create.cshtml" />
-    <Content Include="Views\Role\Index.cshtml" />
+    <Content Include="Views\Building\Create.cshtml" />
+    <Content Include="Views\Building\Index.cshtml" />
+    <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Manage\AddPhoneNumber.cshtml" />
     <Content Include="Views\Manage\ChangePassword.cshtml" />
     <Content Include="Views\Manage\Index.cshtml" />
     <Content Include="Views\Manage\ManageLogins.cshtml" />
     <Content Include="Views\Manage\SetPassword.cshtml" />
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
+    <Content Include="Views\Planet\Create.cshtml" />
+    <Content Include="Views\Planet\Index.cshtml" />
     <Content Include="Views\Resource\Details.cshtml" />
     <Content Include="Views\Resource\Index.cshtml" />
+    <Content Include="Views\Role\Create.cshtml" />
+    <Content Include="Views\Role\Index.cshtml" />
+    <Content Include="Views\Shared\BuildingTypeCard.cshtml" />
+    <Content Include="Views\Shared\Error.cshtml" />
+    <Content Include="Views\Shared\PlanetCard.cshtml" />
     <Content Include="Views\Shared\ResourcesCost.cshtml" />
+    <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\UnitTemplate\Create.cshtml" />
     <Content Include="Views\UnitTemplate\Details.cshtml" />
     <Content Include="Views\UnitTemplate\Fragments\Attacker.cshtml" />
@@ -377,12 +426,14 @@
     <Content Include="Views\UnitTemplate\Fragments\Researcher.cshtml" />
     <Content Include="Views\UnitTemplate\Fragments\Storage.cshtml" />
     <Content Include="Views\UnitTemplate\Index.cshtml" />
-    <Content Include="Views\Planet\Create.cshtml" />
-    <Content Include="Views\Planet\Index.cshtml" />
-    <Content Include="Views\Shared\PlanetCard.cshtml" />
+    <Content Include="Views\Users\Index.cshtml" />
+    <Content Include="Views\Web.config" />
+    <Content Include="Views\_ViewStart.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Services\Views\Player\" />
+    <Folder Include="Views\Base\" />
     <Folder Include="Views\Player\" />
   </ItemGroup>
   <ItemGroup>
