commit building implementation

--- a/AspNetGame/AspNetGame.csproj
+++ b/AspNetGame/AspNetGame.csproj
@@ -397,7 +397,7 @@
     <Content Include="Views\Account\VerifyCode.cshtml" />
     <Content Include="Views\Account\_ExternalLoginsListPartial.cshtml" />
     <Content Include="Views\Building\Create.cshtml" />
-    <Content Include="Views\Building\Index.cshtml" />
+    <Content Include="Views\Planet\Details.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Manage\AddPhoneNumber.cshtml" />
     <Content Include="Views\Manage\ChangePassword.cshtml" />
