[WIP] Introduced resources counters : client periodical update ok, todo : * map prodution amount with back logic (calculate resource production according to building) * update the player resource stock with the client side incremented values

--- a/AspNetGame/AspNetGame.csproj
+++ b/AspNetGame/AspNetGame.csproj
@@ -272,6 +272,7 @@
     <Compile Include="Models\Game\Timeloop\TimeloopService.cs" />
     <Compile Include="Models\Game\Timeloop\TimeloopThread.cs" />
     <Compile Include="Models\Game\Units\UnitTemplate.cs" />
+    <Compile Include="Models\Game\ViewModels\ResourcesModel.cs" />
     <Compile Include="Repositories\Core\BaseRepository.cs" />
     <Compile Include="Repositories\Core\GameRepository.cs" />
     <Compile Include="Repositories\Core\IRepository.cs" />
@@ -436,6 +437,7 @@
     <Content Include="Views\Users\Index.cshtml" />
     <Content Include="Views\Web.config" />
     <Content Include="Views\_ViewStart.cshtml" />
+    <Content Include="Views\Shared\ResourcesCounters.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
